fix: content - text-align center

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -66,5 +66,4 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
 }
